fixing docs
