# backend/docs/swagger.json
@@ -67,14 +67,14 @@
                     {
                         "type": "string",
                         "description": "Positive Text",
-                        "name": "positive_text",
+                        "name": "positive_message",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "Negative Text",
-                        "name": "negative_text",
+                        "name": "negative_message",
                         "in": "query",
                         "required": true
                     }
